# DD2410-Introduction-to-Robotics

./: .gitignore  Dockerfile  Dockerfile.python  Dockerfile.ros  Makefile  README.md
assignment_1/irob_assignment_1/: package.xml
assignment_1/irob_assignment_1/rviz/: view.rviz
assignment_1/irob_assignment_1/scripts/: controller.py
assignment_1_ros_basic/irob_assignment_1/: README.md
assignment_1_ros_basic/irob_assignment_1/launch/: demo.launch  start.launch
assignment_1_ros_basic/irob_assignment_1/rviz/: view.rviz
assignment_1_ros_basic/irob_assignment_1/scripts/: collision_avoidance.py  controller.py  controller_feedback.py  controller_template.py  explorer.py  orm.py  polar_histogram.py  rrt.py  rrt_node.py  sensor.py
assignment_2_inverse_kinematic/kinematics_assignment/launch/: kuka_launch.launch  scara_launch.launch
assignment_2_inverse_kinematic/kinematics_assignment/rviz/: kuka_world.rviz
assignment_2_inverse_kinematic/kinematics_assignment/scripts/: IK_functions.py  kuka_node.py  scara_node.py
assignment_2_inverse_kinematic/lwr_description/model/: kuka_lwr.urdf.xacro
assignment_3_planning/: .zcompdump  demo.ipynb  main.py  solution.py
assignment_4_mapping/mapping_assignment/: CMakeLists.txt
assignment_4_mapping/mapping_assignment/launch/: demo.launch
assignment_4_mapping/mapping_assignment/rviz/: config.rviz
assignment_4_mapping/mapping_assignment/scripts/: compare.py  main.py  mapping.py  mapping_1.py
scripts/: entrypoint.sh
