<?xml version="1.0"?>
<package format="2">
	<name>irob_assignment_1</name>
	<version>1.0.0</version>
	<description>The irob_assignment_1 package</description>
	
	<maintainer email="dduberg@kth.se">Daniel Duberg</maintainer>

	<author email="dduberg@kth.se">Daniel Duberg</author>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>actionlib</depend>
	<depend>actionlib_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>nav_msgs</depend>
	<depend>rospy</depend>
	<depend>sensor_msgs</depend>
	<depend>std_msgs</depend>
	<depend>std_srvs</depend>
	<depend>tf2</depend>
	<depend>tf2_geometry_msgs</depend>
	<depend>tf2_ros</depend>
	<depend>visualization_msgs</depend>

	<build_depend>message_generation</build_depend>
	<exec_depend>message_runtime</exec_depend>


	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->

	</export>
</package>
